# python-project-83

./: .env.example  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
page_analyzer/: analyzer.py  app.py  db.py
page_analyzer/templates/: 404.html  base.html  index.html  url.html  urls.html
