[project]
name = "hexlet-code"
version = "0.1.0"
description = "page analyzer project"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "bs4>=0.0.2",
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "flake8>=7.3.0",
]
